Added update stock functionality