@@ -2,6 +2,7 @@ package com.dev.inventoryservice.service;
 
 import com.dev.inventoryservice.dto.InventoryResponse;
 import com.dev.inventoryservice.dto.ProductDto;
+import com.dev.inventoryservice.dto.UpdateInventoryQuantityDto;
 import com.dev.inventoryservice.entity.Inventory;
 import com.dev.inventoryservice.handler.ResourceNotFoundException;
 import com.dev.inventoryservice.repository.InventoryRepository;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -65,6 +65,50 @@ public class InventoryServiceImpl implements InventoryService{
 
     }
 
+    public List<InventoryResponse> getProductByName(List<String> names) {
+        List<InventoryResponse> availableInventoryResponses = new ArrayList<>();
+
+        for (String name : names) {
+            Inventory inventory = inventoryRepository.findByName(name);
+            if (inventory != null) {
+                InventoryResponse response = new InventoryResponse();
+                response.setName(inventory.getName());
+                response.setQuantity(inventory.getQuantity());
+                response.setStock(inventory.isStock());
+                availableInventoryResponses.add(response);
+            }
+        }
+
+        return availableInventoryResponses;
+
+    }
+
+    @Override
+    public String updateInventoryStock(List<UpdateInventoryQuantityDto> updateInventoryQuantityDtoList) {
+        for(UpdateInventoryQuantityDto dto: updateInventoryQuantityDtoList){
+            String name = dto.getName();
+            int quantity = dto.getQuantity();
+
+            boolean updateStatus = updateInventoryStock(name, quantity);
+
+            if(!updateStatus){
+                return "Update was failed for the product:" + name;
+            }
+        }
+        return "Updated Successfully!";
+    }
+
+    private boolean updateInventoryStock(String name, int quantity) {
+        try {
+            Inventory inventory = inventoryRepository.findByName(name);
+            inventory.setQuantity(quantity);
+            inventoryRepository.save(inventory);
+            return true;
+        }catch (Exception exception){
+            throw new ResourceNotFoundException("Resource Not Found");
+        }
+    }
+
     @Override
     public List<InventoryResponse> getAllAvailableProducts() {
         List<Inventory> inventories = inventoryRepository.findAll();
@@ -76,6 +120,6 @@ public class InventoryServiceImpl implements InventoryService{
                     inventoryResponse.setQuantity(inventory.getQuantity());
                     inventoryResponse.setStock(inventory.isStock());
                     return inventoryResponse;
-                }).collect(Collectors.toList());
+                }).toList();
     }
 }
